--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_USER_POOLS_ID: "ca-central-1_G9tOKhncq"
-      REACT_APP_CLIENT_ID: "6nmc6ijphe0d1cjprjgjhr27lt"
+      REACT_APP_CLIENT_ID: "${AWS_COGNITO_USER_POOL_CLIENT_ID}"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
